deployment/k8s-base-layer-deployment.yaml
###################################
# uploads
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploads
  labels:
    app: uploads
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploads
  template:
    metadata:
      labels:
        app: uploads
    spec:
      containers:
        - name: uploads
          image: us-east1-docker.pkg.dev/snowflake-api-rest/snowflake-api-rest/uploads:1.0
          ports:
            - containerPort: 3002
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: service-uploads
  annotations:
    cloud.google.com/backend-config: '{"default": "uploads-config"}'
spec:
  type: NodePort
  selector:
    app: uploads
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
      nodePort: 31017
---
###################################
# uploads
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
  labels:
    app: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
        - name: analytics
          image: us-east1-docker.pkg.dev/snowflake-api-rest/snowflake-api-rest/analytics:1.0
          ports:
            - containerPort: 3003
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: service-analytics
  annotations:
    cloud.google.com/backend-config: '{"default": "analytics-config"}'
spec:
  type: NodePort
  selector:
    app: analytics
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
      nodePort: 31024
---
